Super_market-main/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supermarket
  labels:
    name: supermarket
    environment: production
